build device board
